Fix serial detection (#20)